# thirteenf

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  build_run.sh
include/: helper.h  helpertools.h  thirteenf.h
resources/: cnsfails.txt  thirteenf_config.json
sql/: holdings.sql  node_data.sql
src/: helper.cpp  helpertools.cpp  tfapp.cpp  thirteenf.cpp
test/: thirteenf_test.cpp
